--- a/package.json
+++ b/package.json
@@ -11,13 +11,28 @@
   "dependencies": {
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.22.10",
     "@types/react": "~18.0.14",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "babel": {
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
+  }
 }
