--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.22.10",
     "@types/react": "~18.0.14",
+    "postcss": "^8.4.28",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
